<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateStudentActivity">

    <TextView
        android:id="@+id/application2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/application"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/newStudentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/studentId"
            android:inputType="text" />

        <EditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/studentName"
            android:inputType="text" />

        <TextView
            android:id="@+id/program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/program"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/newProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/spinnerProgram" />

        <TextView
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/faculty"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/newFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="false"
            android:entries="@array/spinnerFaculty" />

        <TextView
            android:id="@+id/personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/personal"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/newNic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nic"
            android:inputType="text" />

        <EditText
            android:id="@+id/newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/stdPass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/newMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone" />

        <Button
            android:id="@+id/saveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/btn"
            android:onClick="formAdd"
            android:text="@string/updateStudent"
            app:cornerRadius="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="96dp"
        android:layout_height="76dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sliitlogo" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="400dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:background="#255282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn"
            android:text="BACK" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="125dp"
            android:layout_height="27dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/sliituni" />
    </com.google.android.material.navigation.NavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>