<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResult">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="315dp"
        android:layout_height="409dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/stdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/stdId"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvSemester"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnSemester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/spnSemester" />

        <EditText
            android:id="@+id/module1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/module1"
            android:inputType="text" />

        <EditText
            android:id="@+id/module2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/module2"
            android:inputType="text" />

        <EditText
            android:id="@+id/module3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/module3"
            android:inputType="text" />

        <Button
            android:id="@+id/calGpa"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/btn"
            android:text="@string/gpaButton"
            app:cornerRadius="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="96dp"
        android:layout_height="76dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sliitlogo" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="400dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:background="#255282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn"
            android:text="BACK" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="125dp"
            android:layout_height="27dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/sliituni" />
    </com.google.android.material.navigation.NavigationView>

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="496dp"
        android:layout_height="292dp"
        android:layout_marginTop="624dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navigationView"
        app:srcCompat="@drawable/undraw_grades_re_j7d6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="GPA / RESULTS"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

</androidx.constraintlayout.widget.ConstraintLayout>