<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#EBFFFFFF"
        tools:context=".StudentLoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="40dp"
            android:background="#19304FFE"
            android:orientation="vertical"
            android:rotation="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userNameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="8dp"
                android:text="@string/userNameTxt"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/passwordTxt"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/loginBtn"
                android:onClick="submit"
                android:text="@string/loginBtn"
                android:textSize="16sp"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/cancelBtn"
                android:text="@string/cancelBtn"
                android:textSize="16sp"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/signIn"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="454dp"
            android:layout_height="222dp"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/undraw_education_f8ru__1_" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="96dp"
            android:layout_height="76dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navigationView4"
            app:srcCompat="@drawable/sliitlogo" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView4"
            android:layout_width="400dp"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:background="#255282"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="125dp"
                android:layout_height="27dp"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/sliituni" />

        </com.google.android.material.navigation.NavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>