<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4FFFFEFF"
    tools:context=".StaffActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="96dp"
        android:layout_height="76dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/navigationView"
        app:srcCompat="@drawable/sliitlogo" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="400dp"
        android:layout_height="43dp"
        android:layout_marginTop="5dp"
        android:background="#255282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/btn"
            android:text="BACK" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="125dp"
            android:layout_height="27dp"
            android:layout_marginLeft="260dp"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/sliituni" />

    </com.google.android.material.navigation.NavigationView>

    <Button
        android:id="@+id/addStudent"
        style="@style/Widget.Material3.Button"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="140dp"
        android:height="40dp"
        android:backgroundTint="@color/btn"
        android:text="@string/addStudent"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

    <Button
        android:id="@+id/viewStudent"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/btn"
        android:text="@string/viewStudent"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStudent" />

    <Button
        android:id="@+id/exam"
        style="@style/Widget.Material3.Button"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/btn"
        android:text="@string/exam"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStudent" />

    <Button
        android:id="@+id/calender"
        style="@style/Widget.Material3.Button"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/btn"
        android:text="@string/calendar"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="505dp"
        android:layout_height="290dp"
        android:layout_marginTop="444dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studenteducation" />

</androidx.constraintlayout.widget.ConstraintLayout>